--- a/static/stylesheets/bootstrap.css
+++ b/static/stylesheets/bootstrap.css
@@ -165,12 +165,12 @@ body {
 }
 
 a {
-  color: #0088cc;
+  color: #6B9130;
   text-decoration: none;
 }
 
 a:hover {
-  color: #005580;
+  color: #172208;
   text-decoration: underline;
 }
 
