--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <div class="intro_text">
 	<p class="about">Lobbyists From Last Night is a project made during the Comedy Hack Day in NYC. We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution. We want pics, we want stories and we want answers.</p> 
 
-	<p class="about">Made using the Sunlight Congress API and Political Party Time.</p>
+	<p class="about2">Made using the <a href="http://politicalpartytime.org/api/">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/">Political Party Time</a>.</p>
 </div>
 
 
