--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,9 @@
 {% block body %}
 {% block intro %} 
 
+<div id="zip_form">
+
+<fieldset>
 {% macro render_field(field) %}
   <dt>{{ field.label }}
   <dd>{{ field(**kwargs)|safe }}
@@ -19,12 +22,16 @@
 
 <form method="POST" action="/login/">
   <dl>
-    {{ render_field(form.username) }}
+    {{ render_field(form.username) }} 
     {{ render_field(form.csrf_token) }}
     {{ render_field(form.password) }}
   </dl>
   <p><input type=submit value="Log In">
 </form>
+
+</fieldset>
+
+</div>
 {% endblock %}
 
 
