--- a/static/stylesheets/lfln.css
+++ b/static/stylesheets/lfln.css
@@ -190,7 +190,7 @@ th.suggested_tweets, td.suggested_tweets{
 	margin-bottom: 30px;
 }
 
-#zip_form fieldset input[type="text"] {
+#zip_form fieldset input[type="text"], #zip_form fieldset input[type="password"]  {
 	width: 50%;
 	padding: 10px 14px;
 	font-size: 18px;
@@ -303,6 +303,11 @@ tr.event_row_highlighted{
 	margin-top: 8px;
 }
 
+#zipcode {
+	font-family: Georgia;
+	font-weight: normal;
+	font-size: 36px;
+}
 
 
 
