--- a/templates/legislators.html
+++ b/templates/legislators.html
@@ -4,28 +4,35 @@
 {% block body %}
 {% block intro %} 
 
-<div style="float: right;">
+<div style="width:500px; float:left;">
+<h3 style="font-family:Georgia; font-weight:normal; font-size: 36px;">Legislators representing {{ zipcode }}</h3>
+<br/>
+<br/>
+</div>
+
+<div style="float: right; margin-top:-30px;">
 <div id="zip_form">
 <form name="legislators_form">
 <fieldset>
 
     <input type="text" placeholder="Zipcode" style="width:100px; text-align: right;" name="zipcode"/>
     <input type="submit" value="Search another district"/>
+    
 </fieldset>
 </form>
 </div>
 </div>
 
-<h3>Legislators representing {{ zipcode }}</h3>
-<br/>
 
 {% for (chamber, people) in legislators.iteritems() %}
 <div style="float: left; margin-right: 125px; ">
-<h3>{{chamber}}</h3>
-<ul>
+<div style="margin-bottom:10px;">
+<h3 style="font-family:Georgia; font-weight:normal; font-size: 24px;">{{chamber}}</h3>
+</div>
+<ul style="list-style:none;">
   {% if people %}
   {% else %}
-    <em>That's odd, noone represents {{zipcode}}&hellip;</em>
+    <em>That's odd, no one represents {{zipcode}}&hellip;</em>
   {% endif %}
   {% for person in people %}
   <li>
@@ -37,8 +44,8 @@
      {{person['district']}})
     {% endif %}
   </h4>
-    <img src="http://api.twitter.com/1/users/profile_image/?screen_name={{person['twitter_id']}}&size=bigger" style="float: left; width:73px; height: 73px; margin-right: 25px;"/>
-    <ul>
+    <img src="http://api.twitter.com/1/users/profile_image/?screen_name={{person['twitter_id']}}&size=bigger" style="float: left; width:73px; height: 73px; margin-right: 10px;"/>
+    <ul style="list-style:none;" >
       <li><a href="/events/{{person['crp_id']}}">Event Calendar</a></li>
       {% if person['twitter_id'] %}
         <li><a href="http://twitter.com/{{person['twitter_id']}}" target="_blank">@{{person['twitter_id']}}</a></li>
