--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@
 {% block intro %} 
 
 <div class="intro_text">
-	<p class="about">Lobbyists From Last Night is a project made during the Comedy Hack Day in NYC. We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution. We want pics, we want stories and we want answers.</p> 
+	<p class="about" style="">We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution. <strong>We want pics, we want stories and we want answers.</strong></p> 
 
-	<p class="about2">Made using the <a href="http://politicalpartytime.org/api/">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/">Political Party Time</a>.</p>
+	<p class="about2" style="line-height:24px;">Lobbyists From Last Night is a project made during the <a href="http://comedyhackday.org/">Comedy Hack Day in NYC</a>. Made using the <a href="http://politicalpartytime.org/api/">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/">Political Party Time</a>.</p>
 </div>
 
 
