--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
                     <div class="navigation">
                     	<div class="navigation_left">
                         	<span class="nav_item"><a href="{{ url_for('welcome') }}">home</a></span>
-                        	<span class="nav_item"><a href="{{ url_for('about') }}">about</a></span>
+                        	<!-- <span class="nav_item"><a href="{{ url_for('about') }}">about</a></span> -->
                         	<span class="nav_item"><a href="/events/N00009638">pres. obama</a></span>
                         	<span class="nav_item"><a href="/events/N00000286">gov. romney</a></span>
                         </div>
