--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,11 @@
 {% block intro %} 
 
 <div class="intro_text">
-	<p class="about" style="">We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution. <em>We want pics, we want stories and we want answers.</em></p> 
+	<p class="about" style="margin-bottom:10px;">We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution.<em>We want pics, we want stories and we want answers.</em></p> 
 
-	<p class="about2" style="line-height:24px;">Lobbyists From Last Night is a project made during the <a href="http://comedyhackday.org/">Comedy Hack Day in NYC</a>. Made using the <a href="http://politicalpartytime.org/api/">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/">Political Party Time</a>.</p>
 </div>
 
+<p style="font-family:Georgia; font-weight:normal; font-size: 18px; color:#4F4F4F; line-height:24px; "><span style="font-family:Helvetica, Arial; font-size:14px; text-transform: uppercase; font-weight:bold; letter-spacing: 1px;">How this works &rarr;</span> You can input your zip code, see which parties your legislators are invited to and let them know how you really feel.</p>
 
 <div class="sign_up">
 
@@ -31,6 +31,7 @@
 
 </div>
 
+	<p class="about2" style="line-height:24px;">Lobbyists From Last Night is a project made during <a href="http://comedyhackday.org/">Comedy Hack Day in NYC</a>. We're using the <a href="http://politicalpartytime.org/api/">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/">Political Party Time</a>.</p>
 
 
 
