--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,12 @@
 {% block body %}
 {% block intro %} 
 
-<div class="intro_text">
-	<p class="about" style="margin-bottom:10px;">We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution.<em>We want pics, we want stories and we want answers.</em></p> 
+<div class="intro_text" style="text-align:center;">
+	<p class="about" style="margin-bottom:10px;">Tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution?<em> Demand answers.</em></p> 
 
 </div>
 
-<p style="font-family:Georgia; font-weight:normal; font-size: 18px; color:#4F4F4F; line-height:24px; "><span style="font-family:Helvetica, Arial; font-size:14px; text-transform: uppercase; font-weight:bold; letter-spacing: 1px;">How this works &rarr;</span> You can input your zip code, see which parties your legislators are invited to and let them know how you really feel.</p>
+<p style="font-family:Georgia; font-weight:normal; font-size: 18px; color:#4F4F4F; line-height:24px; "><span style="font-family:Helvetica, Arial; font-size:14px; text-transform: uppercase; font-weight:bold; letter-spacing: 1px;">How this works &rarr;</span> Put in your zip code, see parties for your legislator and let them know how you really feel.</p>
 
 <div class="sign_up">
 
