--- a/templates/events.html
+++ b/templates/events.html
@@ -49,7 +49,7 @@
 
 <script type="text/javascript">
 event_id = "{{event_id}}"
-loadEventListings({{events| safe }});
+loadEventListings("{{cid}}", {{events| safe }});
 </script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
