--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <div class="intro_text">
 	<p class="about" style="">We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution. <em>We want pics, we want stories and we want answers.</em></p> 
 
-	<p class="about2" style="line-height:24px;">Lobbyists From Last Night is a project made during the <a href="http://comedyhackday.org/">Comedy Hack Day in NYC</a>. Made using the <a href="http://politicalpartytime.org/api/">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/">Political Party Time</a>.</p>
+	<p class="about2" style="line-height:24px;">Lobbyists From Last Night is a project made during the <a href="http://comedyhackday.org/" target="_blank">Comedy Hack Day in NYC</a>. Made using the <a href="http://services.sunlightlabs.com/docs/Sunlight_Congress_API/" target="_blank">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/" target="_blank">Political Party Time</a>.</p>
 </div>
 
 
