--- a/templates/layout.html
+++ b/templates/layout.html
@@ -57,7 +57,7 @@
             
             <div class="span12">
             	<div id="footer">
-            		<img src="http://larrybuch.com/lfln/footer.png" />
+            		<img src="/static/images/footer.png" />
             		
             			<div id="footer_left">
             				<p>Lobbyists From Last Night</p>
