adding hashtag page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,8 @@
                         	<span class="nav_item"><a href="{{ url_for('welcome') }}">home</a></span>
                         	<!-- <span class="nav_item"><a href="{{ url_for('about') }}">about</a></span> -->
                         	<span class="nav_item"><a href="/events/N00009638">pres. obama</a></span>
-                        	<span class="nav_item"><a href="/events/N00000286">gov. romney</a></span>
+                            <span class="nav_item"><a href="/events/N00000286">gov. romney</a></span>
+                            <span class="nav_item"><a href="/twitter">#LFLN</a></span>
                         </div>
                         <div class="navigation_right">
                         	<span class="nav_item"><a href="{{ url_for('legislators_search') }}">your legislators</a></span>
