--- a/templates/twitter.html
+++ b/templates/twitter.html
@@ -4,9 +4,10 @@
 {% block body %}
 {% block intro %} 
 
+<center>
 <a class="twitter-timeline" href="https://twitter.com/search?q=%23lfln" data-widget-id="244844250079035392">Tweets about "#lfln"</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
+</center>
 
 {% endblock %}
 
