--- a/templates/events.html
+++ b/templates/events.html
@@ -21,7 +21,7 @@
 <br/>
 
 {% if event_count < 1 %}
-  <h4> No events were found for your congressman at this time. Maybe our API is down, or maybe he needs some love. </h4>
+  <h4> No events were found for your congressman at this time. Maybe our API is down, or maybe he needs some love. Instead, check out President Obama & Governor Romney's events.  </h4>
 {% endif %}
 
 </div>
