added contact form

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 {% block body %}
 {% block intro %} 
 
-Contact us, if you dare.
+<iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dGJybWQ0YTZCcUM4aTdqdkhZd2gxVXc6MQ" width="760" height="818" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 {% endblock %}
 
