added phone link to events

--- a/templates/events.html
+++ b/templates/events.html
@@ -18,6 +18,11 @@
 <span class="politician">{{ person['title'] }} {{ person['firstname'] }} {{ person['middlename'] }} {{ person['lastname'] }} ({{ person['party'] }})</span> 
 </div>
 <p style="font-family: Georgia; font-size:16px; font-style:italic; line-height:22px; margin-left:90px;">Looks like the {{ person['title'] }} has been rubbing elbows with the elite. Why weren't you — their most loyal constituent — invited? Tweet at {{ person['firstname'] }} to tell them how you feel. </p>
+{% if person['phone'] %}
+<p style="font-family: Georgia; font-size:16px; font-style:italic; line-height:22px; margin-left:90px;">
+Want to call {{person['title']}} {{person['lastname']}}? <a href="#">{{person['phone']}}</a>
+  </p>
+  {% endif %}
 <br/>
 
 {% if event_count < 1 %}
