--- a/templates/legislators.html
+++ b/templates/legislators.html
@@ -33,7 +33,7 @@
 <ul style="list-style:none;">
   {% if people %}
   {% else %}
-    <em>That's odd, no one represents {{zipcode}}&hellip;</em>
+    <em>That's odd, no one represents {{zipcode}}. Instead, check out President Obama & Governor Romney's events.</em>
   {% endif %}
   {% for person in people %}
   <li>
