--- a/templates/events.html
+++ b/templates/events.html
@@ -17,6 +17,10 @@
 <div style="padding-bottom:10px;">
 <span class="politician">{{ person['title'] }} {{ person['firstname'] }} {{ person['middlename'] }} {{ person['lastname'] }} ({{ person['party'] }})</span> 
 </div>
+
+<div style="float:right; height: 30px; width: 220px; background-color:#8CC63E; text-align:center; margin-left: 30px; vertical-align:text-middle;padding-top:10px; font-weight: bold;"><p style="color:white;"><a href="#" style="color:white;">Demand your invite by phone</a></p></div>
+
+
 <p style="font-family: Georgia; font-size:16px; font-style:italic; line-height:22px; margin-left:90px;">Looks like the {{ person['title'] }} has been rubbing elbows with the elite. Why weren't you — their most loyal constituent — invited? Tweet at {{ person['firstname'] }} to tell them how you feel. </p>
 {% if person['phone'] %}
 <p style="font-family: Georgia; font-size:16px; font-style:italic; line-height:22px; margin-left:90px;">
