Add Github ribbon

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 </head>
 <body>
+    <a href="https://github.com/ChimeraCoder/lobbyistsfromlastnight"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
     <div class="container">
         <div class="row">
             <div class="span12">
@@ -25,6 +26,7 @@
                         </div>
                         <div class="navigation_right">
                         	<span class="nav_item"><a href="{{ url_for('legislators_search') }}">your legislators</a></span>
+                        	<span class="nav_item"><a href="https://github.com/ChimeraCoder/lobbyistsfromlastnight">Source Code</a></span>
                             <span class="nav_item_last"><a href="{{ url_for('contact') }}">contact us</a></span>
                         </div>
                     </div>
