Update 'Contact' page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,6 +4,18 @@
 {% block body %}
 {% block intro %} 
 
+
+<p class="about2" style="line-height:24px;">Lobbyists From Last Night is a project made during the <a href="http://comedyhackday.org/" target="_blank">Comedy Hack Day in NYC</a> by 
+<a href="mailto:larry@lobbyistsfromlastnight.com">Larry Buchanan</a>, 
+<a href="mailto:river@lobbyistsfromlastnight.com">River Clegg</a>, 
+<a href="mailto:rob@lobbyistsfromlastnight.com">Rob Haining</a>, 
+<a href="mailto:nicko@lobbyistsfromlastnight.com">Nicko Margolies</a>, 
+<a href="mailto:nick@lobbyistsfromlastnight.com">Nick Monje</a>, 
+and
+<a href="mailto:aditya@lobbyistsfromlastnight.com">Aditya Mukerjee</a>.
+
+Made using the <a href="http://services.sunlightlabs.com/docs/Sunlight_Congress_API/" target="_blank">Sunlight Congress API</a> and <a href="http://politicalpartytime.org/" target="_blank">Political Party Time</a>.</p>
+
 <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dGJybWQ0YTZCcUM4aTdqdkhZd2gxVXc6MQ" width="760" height="818" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 {% endblock %}
