--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,20 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>{% block title %}Welcome{% endblock %} | LFLN</title>
     <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
-    <meta name="google-site-verification" content="Z34y-XE_ro9rG4mSwyk3CH3bBXvPqXo_TVc0q6O3d9M" />
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-34726418-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+         })();
+
+     </script>
+     <meta name="google-site-verification" content="Z34y-XE_ro9rG4mSwyk3CH3bBXvPqXo_TVc0q6O3d9M" />
 </head>
 <body>
     <a href="https://github.com/ChimeraCoder/lobbyistsfromlastnight"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
