Add /sms/subscribe endpoint to create a SMSSubscription in the database

--- a/templates/events.html
+++ b/templates/events.html
@@ -20,7 +20,7 @@
 
 <form action="/call/twilio" method="POST" name="call_form">
   <input type="hidden" name="to_number" value="{{person['phone']}}"/>
-  <button type="submit" class="btn btn-success">Demand your invite by phone!</button>
+  <button type="submit" class="btn btn-success">Sign up for SMS alerts!</button>
 </form>
 
 <!-- <div style="float:right; height: 30px; width: 220px; background-color:#8CC63E; text-align:center; margin-left: 30px; vertical-align:text-middle;padding-top:10px; font-weight: bold;"><p style="color:white;"><a href="#" style="color:white;" onclick="document.forms['call_form'].submit();">Demand your invite by phone</a></p></div>-->
