Change copy on subscription to refer to real-time updates of current events

--- a/templates/events.html
+++ b/templates/events.html
@@ -35,7 +35,7 @@ Want to call {{person['title']}} {{person['lastname']}}? <a href="#">{{person['p
 <br/>
 
 <div id="events_subscription_prompt">
-  <a href="#" class="subscribe_btn" onclick="displaySubscribeOverlay(); return false;">Subscribe</a> &nbsp; to find out whenever we discover another event for {{person['title']}} {{person['lastname']}}.
+  <a href="#" class="subscribe_btn" onclick="displaySubscribeOverlay(); return false;">Subscribe</a> &nbsp; to be reminded whenever {{person['title']}} {{person['lastname']}} is rubbing elbows with lobbyists at one of these events!
 </div>
 
 </div>
